// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly VideoPlayer  1`] = `
<div
  className="block makeStyles-root-1"
>
  <iframe
    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
    allowFullScreen={true}
    frameBorder="0"
    height="480"
    src="https://www.youtube-nocookie.com/embed/undefined"
    title="Embedded youtube"
    width="853"
  />
</div>
`;

exports[`render correctly VideoPlayer component 1`] = `
<div
  className="block makeStyles-root-1"
>
  <iframe
    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
    allowFullScreen={true}
    frameBorder="0"
    height="480"
    src="https://www.youtube-nocookie.com/embed/https://testUrl.com"
    title="Embedded youtube"
    width="853"
  />
</div>
`;

exports[`render correctly text component 1`] = `
<div
  className="block makeStyles-root-1"
>
  <iframe
    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
    allowFullScreen={true}
    frameBorder="0"
    height="480"
    src="https://www.youtube-nocookie.com/embed/undefined"
    title="Embedded youtube"
    width="853"
  />
</div>
`;
